# pdf-gear

./: .gitignore  README.md  pyproject.toml
pdf_gear/: __main__.py  app.py
