[project]
name = "pdf-gear"
version = "0.1.0"
description = "A standalone PDF manipulation tool with GUI"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0",
    "pymupdf>=1.24",
    "pillow>=10.0",
]

[project.scripts]
pdf-gear = "pdf_gear.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
